--- a/pinas/secrets.yml
+++ b/pinas/secrets.yml
@@ -1,3 +1,22 @@
 ---
-duckdns_domain: 
-duckdns_token: 
+# Duck DNS
+duckdns_domain:
+duckdns_token:
+
+# Nextcloud
+nextcloud_db_username:
+nextcloud_db_password:
+nextcloud_domain_name:
+
+# Transmission
+transmission_rpc_authentication_required:
+transmission_rpc_bind_address:
+transmission_rpc_enabled:
+transmission_rpc_host_whitelist:
+transmission_rpc_host_whitelist_enabled:
+transmission_rpc_password:
+transmission_rpc_port:
+transmission_rpc_url:
+transmission_rpc_username:
+transmission_rpc_whitelist:
+transmission_rpc_whitelist_enabled:
