Add reverse proxy option for transmission with apache

--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -29,7 +29,9 @@
           - fd-find
           - git
           - htop
+          - jq
           - lshw
+          - python3
           - tmux
           - tree
           - unzip
