--- a/roles/transmission/handlers/main.yml
+++ b/roles/transmission/handlers/main.yml
@@ -8,3 +8,9 @@
 - name: reload and restart transmission-daemon
   service: name=transmission-daemon state=reloaded
   notify: restart transmission-daemon
+
+- name: reload apache2
+  service: name=apache2 state=reloaded
+
+- name: restart apache2
+  service: name=apache2 state=restarted
