--- a/secrets.yml
+++ b/secrets.yml
@@ -3,6 +3,14 @@
 duckdns_domain:
 duckdns_token:
 
+# WireGuard
+wireguard_interface_name:
+wireguard_ip_address:
+wireguard_listen_port:
+wireguard_peers:
+  - public_key:
+    allowed_ips:
+
 # Nextcloud
 nextcloud_db_username:
 nextcloud_db_password:
