--- a/vars/secrets.yml
+++ b/vars/secrets.yml
@@ -12,9 +12,12 @@ wireguard_peers:
     allowed_ips:
 
 # Nextcloud
-nextcloud_db_username:
-nextcloud_db_password:
+nextcloud_database_name:
+nextcloud_database_username:
+nextcloud_database_password:
 nextcloud_domain_name:
+nextcloud_admin_username:
+nextcloud_admin_password:
 
 # Transmission
 transmission_rpc_authentication_required:
