--- a/main.yml
+++ b/main.yml
@@ -30,3 +30,9 @@
 
   tasks:
     - import_tasks: tasks/reverse-proxy/main.yml
+
+    - name: Add user {{ username }} to groups {{ ', '.join(user_groups) }}
+      user:
+        name: "{{ username }}"
+        groups: "{{ user_groups }}"
+        append: yes
