--- a/vars/secrets.yml
+++ b/vars/secrets.yml
@@ -5,6 +5,9 @@ username:
 duckdns_domain:
 duckdns_token:
 
+# Certbot
+certbot_email:
+
 # WireGuard
 wireguard_interface_name:
 wireguard_ip_address:
