--- a/tasks/letsencrypt/main.yml
+++ b/tasks/letsencrypt/main.yml
@@ -1,7 +1,56 @@
 ---
-- name: Copy Let's Encrypt certificates
-  copy:
-    src: letsencrypt.conf/
-    dest: /etc/letsencrypt
+- name: Install snapd
+  apt:
+    name: snapd
+    state: present
+
+- name: Install certbot
+  snap:
+    name: certbot
+    classic: true
+    state: present
+
+- name: Install certbot-dns-duckdns
+  snap:
+    name: certbot-dns-duckdns
+    state: present
+
+- name: Connect certbot-dns-duckdns to certbot
+  shell: |
+    snap set certbot trust-plugin-with-root=ok
+    snap connect certbot:plugin certbot-dns-duckdns
+  changed_when: false
+
+- name: Symlink /bin/certbot to /snap/bin/certbot
+  file:
+    src: /snap/bin/certbot
+    dest: /bin/certbot
+    state: link
+
+- name: Save duckdns token to /etc/letsencrypt/duckdns.ini
+  template:
+    src: duckdns.ini
+    dest: /etc/letsencrypt/duckdns.ini
     owner: root
     group: root
+    mode: 0600
+
+- name: Request certificates for domains
+  command:
+    cmd: >
+      certbot certonly
+        --non-interactive
+        --agree-tos
+        --email {{ certbot_email }}
+        --preferred-challenges dns
+        --authenticator dns-duckdns
+        --dns-duckdns-credentials /etc/letsencrypt/duckdns.ini
+        --dns-duckdns-propagation-seconds 60
+        --keep-until-expiring
+        --cert-name "{{ item }}"
+        -d "{{ item }}"
+  loop:
+    - "{{ duckdns_domain }}.duckdns.org"
+    - "*.{{ duckdns_domain }}.duckdns.org"
+  register: certbot_call
+  changed_when: "'no action taken' not in certbot_call.stdout"
