New raspi-reset script

--- a/tasks/raspi-reset/main.yml
+++ b/tasks/raspi-reset/main.yml
@@ -2,7 +2,7 @@
 - name: Copy the raspi-reset script
   copy:
     src: raspi-reset
-    dest: /usr/bin/raspi-reset
+    dest: /sbin/raspi-reset
     owner: root
     group: root
     mode: 0755
