--- a/main.yml
+++ b/main.yml
@@ -29,6 +29,11 @@
     - import_tasks: tasks/apache/main.yml
 
   tasks:
+    - name: Disable sudo with no password
+      file:
+        path: /etc/sudoers.d/010_pi-nopasswd
+        state: absent
+
     - name: Add user {{ username }} to groups {{ ', '.join(user_groups) }}
       user:
         name: "{{ username }}"
