--- a/vars/secrets.yml
+++ b/vars/secrets.yml
@@ -1,5 +1,6 @@
 ---
 username:
+main_domain:
 
 # Duck DNS
 duckdns_domain:
@@ -7,14 +8,14 @@ duckdns_token:
 
 # Certbot
 certbot_email:
+certbot_domains: []
 
 # WireGuard
 wireguard_interface_name:
 wireguard_ip_address:
 wireguard_listen_port:
-wireguard_peers:
-  - public_key:
-    allowed_ips:
+wireguard_private_key:
+wireguard_peers: []
 
 # Nextcloud
 nextcloud_database_name:
