--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,12 +1,10 @@
 ---
-main_domain: "{{ duckdns_domain }}.duckdns.org"
-
 # Argon EON
 argoneon_rtc_service_enabled: no
 argoneon_fan_lcd_service_enabled: yes
 
 # Nextcloud
-nextcloud_data_directory: /srv/nextcloud
+nextcloud_data_directory: /data/nextcloud
 nextcloud_php_memory_limit: 4G
 nextcloud_enable_ssl: yes
 nextcloud_enable_hsts: yes
@@ -19,32 +17,14 @@ nextcloud_apps:
   - maps
 
 # Transmission
-transmission_download_dir: "/srv/transmission/downloads"
-transmission_incomplete_dir: "/srv/transmission/incomplete_downloads"
+transmission_download_dir: "/data/transmission/downloads"
+transmission_incomplete_dir: "/data/transmission/incomplete_downloads"
 transmission_incomplete_dir_enabled: true
 
-# Disks
-disks:
-  - device: /dev/sda1
-    path: /mnt/hdd500
-    fs: ext4
-  - device: /dev/sdb1
-    path: /mnt/hdd750
-    fs: ext4
-
-# Symlinks
-symlinks:
-  - src: /mnt/hdd500/transmission
-    link: /srv/transmission
-  - src: /mnt/hdd500/letsencrypt
-    link: /etc/letsencrypt
-
-# Bind mounts
-bind_mounts:
-  - src: /mnt/hdd500/nextcloud
-    mnt: /srv/nextcloud
+# Syncthing
+syncthing_enable_service: yes
+syncthing_user: "{{ username }}"
 
 # Groups
 user_groups:
-  - www-data
   - debian-transmission
