--- a/main.yml
+++ b/main.yml
@@ -29,6 +29,7 @@
     - import_tasks: tasks/raspi-reset/main.yml
     - import_tasks: tasks/letsencrypt/main.yml
     - import_tasks: tasks/apache/main.yml
+    - import_tasks: tasks/playlist-sync/main.yml
 
   tasks:
     - name: Disable sudo with no password
