--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -34,6 +34,7 @@
           - lsof
           - ncdu
           - python3
+          - tcpdump
           - tmux
           - tree
           - unzip
