--- a/vars/secrets.yml
+++ b/vars/secrets.yml
@@ -40,3 +40,8 @@ transmission_rpc_url:
 transmission_rpc_username:
 transmission_rpc_whitelist:
 transmission_rpc_whitelist_enabled:
+
+# Vaultwarden
+vaultwarden_domain:
+vaultwarden_port:
+vaultwarden_admin_token:
