Rework apache config management to make it more generic and include ReverseProxy macro

--- a/tasks/apache/conf-available/default-deny-macro.conf
+++ b/tasks/apache/conf-available/default-deny-macro.conf
@@ -1,12 +1,7 @@
-<Macro default_config>
+<Macro DefaultDeny>
 	<Location />
 		Deny from all
 		Options None
 		ErrorDocument 403 Forbidden.
 	</Location>
 </Macro>
-
-
-<VirtualHost *:80 *:*>
-	Use default_config
-</VirtualHost>
