--- a/main.yml
+++ b/main.yml
@@ -21,6 +21,7 @@
     - { role: duckdns, tags: duckdns }
     - { role: wireguard, tags: wireguard }
     - { role: docker, tags: docker }
+    - { role: lazydocker, tags: lazydocker }
     - { role: syncthing, tags: syncthing }
     - { role: transmission, tags: transmission }
     - { role: nextcloud, tags: nextcloud }
