Rename fstab -> storage

--- a/main.yml
+++ b/main.yml
@@ -27,7 +27,7 @@
     - { role: nextcloud, tags: nextcloud }
 
   pre_tasks:
-    - { import_tasks: tasks/fstab/main.yml, tags: fstab }
+    - { import_tasks: tasks/storage/main.yml, tags: storage }
     - { import_tasks: tasks/symlinks/main.yml, tags: symlinks }
     - { import_tasks: tasks/raspi-reset/main.yml, tags: raspi-reset }
 
