[apache] Add bind address parameter to ReverseProxy macro

--- a/tasks/apache/conf-available/reverse-proxy.conf
+++ b/tasks/apache/conf-available/reverse-proxy.conf
@@ -1,10 +1,10 @@
-<Macro ReverseProxy $domain $port>
-    <VirtualHost *:80>
+<Macro ReverseProxy $domain $port $bind_addr>
+    <VirtualHost $bind_addr:80>
         ServerName $domain
         Redirect permanent / https://$domain/
     </VirtualHost>
 
-    <VirtualHost *:443>
+    <VirtualHost $bind_addr:443>
         ServerName $domain
 
         ProxyPass "/" "http://127.0.0.1:$port/"
