[apache] Use macro for Listen directive in ports.conf

--- a/tasks/apache/ports.conf
+++ b/tasks/apache/ports.conf
@@ -1,12 +1,14 @@
-Listen 10.0.0.1:80
-Listen 127.0.0.1:80
+<Macro ListenOn $addr>
+	Listen $addr:80
 
-<IfModule ssl_module>
-	Listen 10.0.0.1:443
-	Listen 127.0.0.1:443
-</IfModule>
+	<IfModule ssl_module>
+		Listen $addr:443
+	</IfModule>
 
-<IfModule mod_gnutls.c>
-	Listen 10.0.0.1:443
-	Listen 127.0.0.1:443
-</IfModule>
+	<IfModule mod_gnutls.c>
+		Listen $addr:443
+	</IfModule>
+</Macro>
+
+Use ListenOn 10.0.0.1
+Use ListenOn 127.0.0.1
