[apache] Make apache start after wireguard

--- a/tasks/apache/main.yml
+++ b/tasks/apache/main.yml
@@ -4,6 +4,8 @@
     name: apache2
     state: present
 
+- import_tasks: after-wireguard.yml
+
 - name: Enable necessary apache modules
   apache2_module:
     name: "{{ item }}"
