[apache] Fix websockets for Vaultwarden's reverse proxy

--- a/tasks/apache/conf-available/reverse-proxy.conf
+++ b/tasks/apache/conf-available/reverse-proxy.conf
@@ -11,3 +11,20 @@
         ProxyPassReverse "/" "http://127.0.0.1:$port/"
     </VirtualHost>
 </Macro>
+
+<Macro ReverseProxyWS $domain $port $bind_addr>
+    <VirtualHost $bind_addr:80>
+        ServerName $domain
+        Redirect permanent / https://$domain/
+    </VirtualHost>
+
+    <VirtualHost $bind_addr:443>
+        ServerName $domain
+
+        ProxyPass "/" "http://127.0.0.1:$port/" upgrade=websocket
+        ProxyPassReverse "/" "http://127.0.0.1:$port/"
+
+        ProxyPreserveHost On
+        RequestHeader set X-Real-IP %{REMOTE_ADDR}s
+    </VirtualHost>
+</Macro>
