[storage/zfs] Install ZFS from backports

--- a/tasks/storage/zfs.yml
+++ b/tasks/storage/zfs.yml
@@ -1,7 +1,14 @@
 ---
+- name: Add {{ ansible_distribution_release }}-backports repository
+  apt_repository:
+    repo: deb http://deb.debian.org/debian {{ ansible_distribution_release }}-backports main contrib
+    filename: backports
+    update_cache: yes
+
 - name: Install ZFS
   apt:
     name: zfsutils-linux
+    default_release: "{{ ansible_distribution_release }}-backports"
     state: present
 
 - name: Import ZFS pool
