--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -25,6 +25,7 @@
         name:
           - bat
           - command-not-found
+          - cryptsetup
           - curl
           - fd-find
           - git
@@ -34,6 +35,7 @@
           - lshw
           - lsof
           - ncdu
+          - pv
           - python3
           - tcpdump
           - tmux
