--- a/tasks/security/main.yml
+++ b/tasks/security/main.yml
@@ -1,4 +1,5 @@
 ---
-- import_tasks: sshd.yml
-- import_tasks: pam-ssh-agent-auth.yml
-# - import_tasks: unattended-upgrades.yml
+- { import_tasks: sshd.yml, tags: sshd }
+- { import_tasks: firewall.yml, tags: firewall }
+- { import_tasks: sudo-ssh-agent-auth.yml, tags: sudo-ssh-agent-auth }
+- { import_tasks: unattended-upgrades.yml, tags: unattended-upgrades }
