[security] Move "disable sudo with no password" task to its own task file

--- a/tasks/security/main.yml
+++ b/tasks/security/main.yml
@@ -3,3 +3,4 @@
 - { import_tasks: firewall.yml, tags: firewall }
 - { import_tasks: sudo-ssh-agent-auth.yml, tags: sudo-ssh-agent-auth }
 - { import_tasks: unattended-upgrades.yml, tags: unattended-upgrades }
+- { import_tasks: disable-sudo-nopasswd.yml, tags: disable-sudo-nopasswd }
