[storage] Add bind-mounts tag to bind mounts task

--- a/tasks/storage/main.yml
+++ b/tasks/storage/main.yml
@@ -13,6 +13,7 @@
   loop: "{{ disks }}"
 
 - name: Add bind mounts
+  tags: bind-mounts
   mount:
     src: "{{ item.src }}"
     path: "{{ item.mnt }}"
