[user] Bind mount user home to home folder in zfs 'users' dataset

--- a/main.yml
+++ b/main.yml
@@ -32,6 +32,7 @@
     - { import_tasks: tasks/storage/main.yml, tags: storage }
     - { import_tasks: tasks/symlinks/main.yml, tags: symlinks }
     - { import_tasks: tasks/raspi-reset/main.yml, tags: raspi-reset }
+    - { import_tasks: tasks/user/main.yml, tags: user }
 
   tasks:
     - { import_tasks: tasks/security/main.yml, tags: security }
@@ -47,20 +48,3 @@
         name: "{{ username }}"
         groups: "{{ user_groups + unix_groups | list }}"
         append: yes
-
-    - name: Add SSH keys
-      tags: ssh-keys
-      authorized_key:
-        user: "{{ username }}"
-        key: "{{ lookup('file', '{{ item }}') }}"
-        state: present
-      loop: "{{ ssh_keys }}"
-
-    - name: Copy some dotfiles
-      tags: dotfiles
-      become: yes
-      become_user: "{{ username }}"
-      copy:
-        src: "{{ item }}"
-        dest: "{{ item }}"
-      loop: "{{ dotfiles }}"
