[storage/zfs] Enable monthly scrub

--- a/tasks/storage/zfs.yml
+++ b/tasks/storage/zfs.yml
@@ -15,3 +15,9 @@
   command:
     cmd: zpool import nas
     creates: /nas
+
+- name: Enable monthly scrub
+  systemd_service:
+    name: zfs-scrub-monthly@nas.timer
+    state: started
+    enabled: yes
